# RacunarstvoUOblaku

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
cloud_computing/: .env  .env1  .env2
cloud_computing/app/: admin.py  models.py  serializers.py  urls.py  views.py
cloud_computing/app/migrations/: 0001_initial.py  0002_counter.py
cloud_computing/cloud_computing/: asgi.py  settings.py  urls.py  wsgi.py
vagrant/: Vagrantfile
vagrant/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
