[tool.poetry]
name = "racunarstvouoblaku"
version = "0.1.0"
description = "Poetry projekat"
authors = ["Bojan Simeunovic"]

[tool.poetry.dependencies]
python = "^3.8"
django = "4.0.1"
python-decouple = "3.5"
djangorestframework = "3.13.1"
psycopg2-binary = "2.9.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
